--- a/230517.html
+++ b/230517.html
@@ -11,8 +11,7 @@
 </body>
 <script>
     let name = prompt("반장 선거").split(" ");
-    console.log(name)
-    let a=name.filter("민우");
-    console.log(a);
+    console.log(typeof name);
+    console.log(name);
 </script>
 </html>
